--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,5 +1,4 @@
 <footer class="footer">
-    <img src="/imgs/ytechCroppedNoBG.png" alt: logo class="logo">
     <div class="text-container">
         <h3>York County School of Technology</h3>
         <p>
@@ -10,7 +9,7 @@
         </p>
     </div>
 
-    <div class="social-media">
+    <div class="flex-container">
         <a href="https://twitter.com/YTSpartanNation" class="login-button" style="text-align:right">
         <img border="0" alt="facebook" src="/imgs/twitter.png" width="75" height="75">
         </a>
