--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,4 +1,5 @@
 <footer class="footer">
+    <img src="/imgs/ytechCroppedNoBG.png" alt: logo class="logo">
     <div class="text-container">
         <h3>York County School of Technology</h3>
         <p>
@@ -9,7 +10,7 @@
         </p>
     </div>
 
-    <div class="flex-container">
+    <div class="social-media">
         <a href="https://twitter.com/YTSpartanNation" class="login-button" style="text-align:right">
         <img border="0" alt="facebook" src="/imgs/twitter.png" width="75" height="75">
         </a>
