--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,8 +19,10 @@
 
         <div class="mainInfo">
             <u><h3>Information</h3></u>
-            <p>lorem ipsum</p>
-            <p>scree scree scree scree scree screescree scree screescreescree screescree</p>
+            <p>2022-23 School Year Calender</p>
+            <p>Free and Reduced Lunch</p>
+            <p>Comcast Internet for Your Home</p>
+            <p>Tech Gear Online Store</p>
         </div>
 
 
@@ -28,9 +30,9 @@
 
         <div class="announcements">
             <u><h3>Announcements</h3></u>
-            <p>test</p>
-            <p>test 2</p>
-            <p>test 3</p>
+            <p>Parent Teacher Converences</p>
+            <p>Carrer Camp Summer 2023</p>
+            <p>York Tech Times Fall 2022</p>
 
         </div>
 
@@ -42,7 +44,7 @@
                 <br>
                 <a href="https://schoology.ytech.edu/login/ldap?destination=home&school=281446774">Schoology</a>
                 <br>
-                <a href="">Office 365 (NO CURRENT LINK)</a>
+                <a href="https://www.office.com/">Office 365</a>
                 <br>
                 <a href="https://drive.google.com">Google Drive</a>
             </div>
