--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
         <center>
             <div class="whyUs">
                 <u><h3>Why York Tech?</h3></u>
-                <p>spartan strong</p>
+                <p>Why York Tech? Here we teach our students how to be </p>
             </div>
       
        
