--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,6 +1,6 @@
 <footer class="footer">
     <img src="/imgs/ytechCroppedNoBG.png" alt: logo class="logo">
-    <button href="/login" class="login-button">login</button>
+    <!-- <button href="/login" class="login-button">login</button> -->
     <div class="text-container">
         <h3>York County School of Technology</h3>
         <p>
