--- a/views/athleticsHome.ejs
+++ b/views/athleticsHome.ejs
@@ -17,23 +17,23 @@
 
     <div class="general">
         <div class="spartanAthletics">
-            <h1>Spartan Athletics</h1>
+            <u><h1>Spartan Athletics</h1></u>
             <p>Athletic Director: Rob Caruso</p>
             <p>Assistant Athletic Director: Open</p>
         </div>
     
         <div class="specialAnnouncements">
-            <h1>Special Announcements</h1>
+            <u><h1>Special Announcements</h1></u>
         </div>
        
     
         <div class="schedules">
-            <h1>Daily Sports Schedules</h1>
+            <u><h1>Daily Sports Schedules</h1></u>
             <a href="https://ytechspartans.bigteams.com/main/calendar">Calander</a>
         </div>
     
         <div class="prices">
-            <h1>Event Admission Prices</h1>
+            <u><h1>Event Admission Prices</h1></u>
     
             <h3>Varsity:</h3>
             <p>Adults: $4.00</p>
