added to why us speech

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,8 @@
         <center>
             <div class="whyUs">
                 <u><h3>Why York Tech?</h3></u>
-                <p>Why York Tech? Here we teach our students how to be </p>
+                <p>Why York Tech? Here we teach our students how to be career ready and how to be proffesional.</p>
+                <p>When our students leave York Tech, they are ready to take on the workforce headon and be prepared for what comes ahead of them. </p>
             </div>
       
        
