--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,6 +1,5 @@
 <footer class="footer">
-    <img src="/imgs/ytechCroppedNoBG.png" alt: logo class="logo">
-    <div class="text-container">
+    <div class="flex-container">
         <h3>York County School of Technology</h3>
         <p>
             2179 S. Queen St, York, PA 17402<br>
@@ -10,7 +9,7 @@
         </p>
     </div>
 
-    <div class="social-media">
+    <div class="flex-container">
         <a href="https://twitter.com/YTSpartanNation" class="login-button" style="text-align:right">
         <img border="0" alt="facebook" src="/imgs/twitter.png" width="75" height="75">
         </a>
