--- a/static/styles.css
+++ b/static/styles.css
@@ -120,7 +120,7 @@ a:link {
 }
 
 a:hover {
-    background-color: transparent;
+    background-color: #095540;
     text-decoration: underline;
 }
 
