--- a/views/career_programs.ejs
+++ b/views/career_programs.ejs
@@ -27,6 +27,7 @@
 </center>
 <center>
 <div class="list_of_options">
+<h3>Information Technology</h3>
 <li><a href="http://localhost:1010/Hardware">Electronics/IT Support</a></li>
 <li><a href="http://localhost:1010/Programming">Computer Programming</a></li>
 <li><a href="http://localhost:1010/Networking">Networking and Cyber Security</a></li>
