named home page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,6 +4,8 @@
     <link rel="stylesheet" href="styles.css">
     <head>
 
+        <title>York County School of Technology</title>
+
     </head>
     <body>
 
