--- a/static/styles.css
+++ b/static/styles.css
@@ -172,6 +172,28 @@ footer {
     footer {
       flex-direction: column;
     }
+
+    
+  }
+
+  @media (max-width: 646px) {
+    .header-h1 {
+        padding-top: 10px;
+        margin-top: 20px;
+        margin-left: 7px;
+        font-size: 3vw;
+
+    }
+    .header-img {
+        padding-top: 5px;
+        padding-right: 5px;
+        width: 11vw;
+    }
+    .header-container {
+        padding-bottom: 75px;
+        padding-top: .5px;
+        padding-left: 5px;
+    }
   }
 
 /* main page */
