--- a/views/athleticsHome.ejs
+++ b/views/athleticsHome.ejs
@@ -24,6 +24,17 @@
     
         <div class="specialAnnouncements">
             <u><h1>Special Announcements</h1></u>
+            <h3>Semifinals:</h3>
+            <h4>Boys 2/14/2023</h4>
+            <p>William Penn vs. West York 6PM</p>
+            <p>Central York vs. Eastern 730PM</p>
+            <p>Doors Open 5PM - All Tickets $6.00</p>
+
+            <h4>Girls 2/15/2023</h4>
+            <p>Dallastown vs. Red Lion 6PM</p>
+            <p>Central York vs. Delone Catholic 730PM</p>
+            <p>Doors Open 5PM - All Tickets $6.00</p>
+
         </div>
        
     
@@ -46,6 +57,27 @@
             <h3>All Contestants:</h3>
             <p>Senior Citizen $2.00</p>
         </div>
+
+        <div class="scorevision">
+            <U><H1>Scorevision</H1></U>
+            <p>The ScoreVision Fan App is your key to track our volleyball and basketball teams in real time. No matter how you are following the action, the ScoreVision Fan App keeps you engaged and up to date with game, score information, video highlights, game schedules, player information, announcements, and interactive features. The Fan App is personalized to our school and is connected to our ScoreVision Scoreboard in the Spartan Fieldhouse so you get an engaging fan app experience.</p>
+
+            <a href="https://scorevision.com/download/">ScoreVision Fan App</a>
+        </div>
+
+        <div class="banners">
+            <u><h1>Banners, Signs, Noisemakers, Listening Devices, and Spectator Decorum</h1></u>
+            <p>The presence and/or the use of balloons, banners, laser pointers, noisemakers, pom-poms or sports balls (by spectators), shakers, signs, sirens, strips of material, towels, whistles, and/or portable listening devices (without earphones) are PROHIBITED! The use of pom-poms by cheerleaders and small portable listening devices with earphones is permitted. Spectators are prohibited from removing their shirt and/or using face/body paint or any garment that covers the face while in attendance. </p>
+        </div>
+
+
+        <div class="opportunities">
+            <u><h1>Interscholastic Athletic Opportunites Disclosure Form</h1></u>
+            <p>In compliance with State regulations, York County School of Technology completes the Interscholastic Athletic Opportunities Disclosure Form in late October of each school year.  This reporting requirement provides a detailed review of athletic programs offered by York County School of Technology and includes the number of students participating and the cost of each competitive athletic program for grades 9 through 12.  </p>
+            <p>A copy of the report is available for review in the Administration Office.</p>
+        </div>
+
+
     </div>
 
 
