finished important info

--- a/views/athleticsHome.ejs
+++ b/views/athleticsHome.ejs
@@ -71,6 +71,33 @@
         </div>
 
 
+        <div class="coaching">
+            <u><h1>Want to coach at Tech?</h1></u>
+            <p>Complete the online coaching application.  Save it as a pdf and email it or print and mail the application to the Athletic Director at the address on form.  Thank you.
+            <br>
+            <a href="https://cdn5-ss1.sharpschool.com/UserFiles/Servers/Server_20326237/File/Application-CoachingRev5.pdf">Coaching Application</a>
+            <br>
+            <a href="https://cdn5-ss1.sharpschool.com/UserFiles/Servers/Server_20326237/File/Application%20%20FVol%20Coach.pdf">Volunteer Coaching Application</a>
+            <br>
+            <a href="https://nfhslearn.com/courses/concussion-in-sports-2">Concussion Certification</a>
+            <br>
+            <a href="https://nfhslearn.com/courses/sudden-cardiac-arrest">Sudden Cardiac Arrest Certification</a>
+            <br>
+            <a href="https://www.reportabusepa.pitt.edu/">Mandatory Reporting/Recognising and Reporting Child Abuse</a>
+            <br>
+            <a href="https://epatch.pa.gov/home">Act 34: PA Criminal Record Check(online process)</a>
+            <br>
+            <a href="https://www.compass.state.pa.us/cwis/public/home">Act 151: Child Abuse Clearance(online process)</a>
+            <br>
+            <a href="https://www.iu12.org/Page/463">Act 24: FBI Fingerprint Check(online registration)</a>
+            <br>
+            <p>FBI service code is IKG6NX</p>
+
+
+            </p>
+        </div>
+        
+
         <div class="opportunities">
             <u><h1>Interscholastic Athletic Opportunites Disclosure Form</h1></u>
             <p>In compliance with State regulations, York County School of Technology completes the Interscholastic Athletic Opportunities Disclosure Form in late October of each school year.  This reporting requirement provides a detailed review of athletic programs offered by York County School of Technology and includes the number of students participating and the cost of each competitive athletic program for grades 9 through 12.  </p>
