--- a/static/styles.css
+++ b/static/styles.css
@@ -78,6 +78,7 @@ font-size: medium;
 /* header Styles */
 
 
+
 .header-container {
     background-color: #00953b;
     padding-bottom: 150px;
@@ -136,8 +137,17 @@ a:visited {
 .header-pages {
     background-color: #333333;
     text-align: center;
-    
-    
+    flex-basis: content;
+
+    display: flex;
+}
+
+
+.header-page {
+    border-left: 1px solid;
+    color: #fff; 
+    flex-direction: row;
+    flex: 1 1 0;
 }
 
 /* body Styles */
@@ -167,33 +177,49 @@ footer {
     display: table;
     text-align:center;
 }
-
-@media (max-width: 600px) {
+/* Footer Mobile Optimization */
+@media (max-width: 650px) {
     footer {
       flex-direction: column;
     }
 
     
   }
-
-  @media (max-width: 646px) {
+/* Header Mobile Optimization */
+  @media (max-width: 650px) {
     .header-h1 {
         padding-top: 10px;
         margin-top: 20px;
         margin-left: 7px;
-        font-size: 3vw;
+        font-size: 4.5vw;
 
     }
     .header-img {
         padding-top: 5px;
         padding-right: 5px;
-        width: 11vw;
+        width: 15vw;
     }
     .header-container {
         padding-bottom: 75px;
-        padding-top: .5px;
+        padding-top: 15px;
         padding-left: 5px;
     }
+
+    .header-pages {
+        flex-direction: column;
+        
+    }
+
+    .header-page {
+        border-bottom: 1px solid #fff;
+        padding-top: 7px;
+        padding-bottom: 7px;
+    }
+
+    .header-links {
+        font-size: 75%;
+    }
+
   }
 
 /* main page */
