--- a/views/template.ejs
+++ b/views/template.ejs
@@ -1,37 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+<%- include('partials/_header') -%>
 <link rel="stylesheet" href="styles.css">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>Template</title>
 </head>
 <body>
 <center>
-    <div class=" ">
-    <h1>information</h1>
-    </div>
-</center>
-<center>
-    <div class=" ">
-    <h1>Information</h1>
-    <p id=" ">paragraph</p>
-    </div> 
-</center>
-<center>
-    <div class=" ">
-    <h1>Information</h1>
-    <p id=" ">paragraph</p>
-    </div>
-</center>
-<center>
-    <div class=" ">
-    <h1>Information</h1>
-    <p id=" ">paragraph</p>
+    <div class="text-container">
+
+    <h1>page header goes here</h1>
+
+    <video width="70%" controls="controls"/>
+    <source src="/videos/mr_saia.mp4" type="video/mp4">
+    </video>
+
+    <p>page content goes here</p>
+
     </div>
 </center>
 </body>
+<%- include('partials/_footer') -%>
 </html>
-
-
