all work for 2/24/2023
Issues #70 #66 #27

--- a/static/styles.css
+++ b/static/styles.css
@@ -310,8 +310,11 @@ footer a {
 
 
 
+/* Shop pages template CSS */
+.Temph1 {
+    text-align: center;
+}
 
-/* athletics home page */
-.general {
-    
+.pageInfo {
+    font-size: large;
 }
