--- a/views/information_systems_managment.ejs
+++ b/views/information_systems_managment.ejs
@@ -17,7 +17,7 @@
 
 <center>
 <div class="it_video">
-<video width="1000px" height="800px" controls="controls"/>
+<video width="1000px" height="800px" controls="controls">
 <source src="/videos/mr_saia.mp4" type="video/mp4">
 </video>
 </div>
