--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,10 +16,10 @@
             </div>
         </div>
         <div class="header-pages">
-            <a href="/" class="header-page">Home</a>
-            <a href="/parents" class="header-page">Parents And Caregivers</a>
-            <a href="/athletics" class="header-page">Spartan Athletics</a>
-            <a href="/career" class="header-page">Career Programs</a>
+            <a href="/">Home</a>
+            <a href="/parents">Parents And Caregivers</a>
+            <a href="/athletics">Spartan Athletics</a>
+            <a href="/career">Career Programs</a>
 
         </div>
 
