styles.css change

--- a/static/styles.css
+++ b/static/styles.css
@@ -325,6 +325,10 @@ footer a {
     font-size: large;
 }
 
+.Temph1 {
+    text-align: center;
+}
+
 .schedules {
     width: 600px;
     text-align: left;
