--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,7 @@
         <center>
             <div class="whyUs">
                 <u><h3>Why York Tech?</h3></u>
-                <p>Why York Tech? Here we teach our students how to be career ready and how to be proffesional.</p>
+                <p>Why York Tech? Here we teach our students how to be career ready and how to be proffessional.</p>
                 <p>When our students leave York Tech, they are ready to take on the workforce headon and be prepared for what comes ahead of them. </p>
             </div>
       
@@ -26,6 +26,10 @@
             <p>Free and Reduced Lunch</p>
             <p>Comcast Internet for Your Home</p>
             <p>Tech Gear Online Store</p>
+
+
+            
+
         </div>
 
 
@@ -42,7 +46,7 @@
         </div>
 
 
-            <br>
+
             <div class="quickLinks">
                 <u><h3>Quick Links</h3></u>
                 <a href="https://skyward.iscorp.com/YorkTechPAStuSTS/Session/">Skyward</a>
