home page flex boxes started

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
 
     </head>
     <body>
-
+        <div class="home-container">
         <center>
             <div class="whyUs">
                 <u><h3>Why York Tech?</h3></u>
@@ -58,7 +58,7 @@
                 <a href="https://drive.google.com">Google Drive</a>
             </div>
         </center>
-  
+    </div>
             
     
       
