--- a/static/styles.css
+++ b/static/styles.css
@@ -299,6 +299,14 @@ footer a {
 
 }   
 
+
+.home-container {
+   
+}
+
+
+
+
 /* Shop CSV template */
 .text-container{
     font-family: helvetica;
