--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,12 +1,23 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
+
+        <link rel="stylesheet" href="/styles.css">
+        <style>
+            @font-face {
+            font-family: 'Autumn Thin';
+            src: url('/fonts/autumnRegular.ttf') format('truetype');
+            }
+        </style>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class="header-container">
             <div>
-                <img class="header-img" src="imgs\Spart.png" alt="">
-                <h1 class="header-h1">York County School Of Technology</h1>
+                <a href="/"><input type="image" class="header-img" src="imgs\Spart.png"> </a>
+                <h1 class="header-h1">York County School of Technology</h1>
+
             </div>
 
             <div class="header-links">
