--- a/views/career_programs.ejs
+++ b/views/career_programs.ejs
@@ -28,10 +28,34 @@
 <center>
 <div class="list_of_options">
 <h3>Information Technology</h3>
-<li><a href="http://localhost:1010/Hardware">Electronics/IT Support</a></li>
-<li><a href="http://localhost:1010/Programming">Computer Programming</a></li>
-<li><a href="http://localhost:1010/Networking">Networking and Cyber Security</a></li>
-<li><a href="http://localhost:1010/Software">Information System Management</a></li>
+<li><a href="/"></a></li>
+
+<li><a href="/Hardware">Electronics/IT Support</a></li>
+<li><a href="/Programming">Computer Programming</a></li>
+<li><a href="/Networking">Networking and Cyber Security</a></li>
+<li><a href="/Software">Information System Management</a></li>
+<li><a href="/Culinary">Culinary Arts</a></li>
+<li><a href="/Architecture">Architecture</a></li>
+<li><a href="/Automotive">Automotive</a></li>
+<li><a href="/Carpentry">Carpentry</a></li>
+<li><a href="/Collision">Collision Repair</a></li>
+<li><a href="/Commercial">Commercial & Advertising Art</a></li>
+<li><a href="/Communications">Communications Technology</a></li>
+<li><a href="/Criminal">Criminal Justice</a></li>
+<li><a href="/Dental">Dental Assisting</a></li>
+<li><a href="/Diesel">Diesel Technology</a></li>
+<li><a href="/Childhood">Early Childhood Education</a></li>
+<li><a href="/Electrical">Electrical Occupations</a></li>
+<li><a href="/Engineering">Engineering/Advanced Manufacturing</a></li>
+<li><a href="/HVAC">Heating, Ventilation & Air Conditioning/Plumbing</a></li>
+<li><a href="/Landscaping">Landscaping & Agriculture</a></li>
+<li><a href="/Cosmetology">Licensed Cosmetology</a></li>
+<li><a href="/Medical">Medical Professions Program</a></li>
+<li><a href="/Powersports">PowerSports & Engine Technology</a></li>
+<li><a href="/PrecisionMachining">Precision Machining Technology</a></li>
+<li><a href="/Sports">Sports Technology & Exercise Science</a></li>
+<li><a href="/Welding">Welding & Metal Fabrication Technology</a></li>
+
 </div>
 </center>
 </body>
