--- a/views/parents.ejs
+++ b/views/parents.ejs
@@ -5,31 +5,57 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parents and Caregivers</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">    <title>Parents and Caregivers</title>
 </head>
 <body>
 <center>
-    <div class="Welcome">
-    <h1>Welcome Parents and Caregivers</h1>
-    </div>
-</center>
-<center>
-    <div class="infoiaccess">
-    <h1>What information can I access?</h1>
-    <p id="infoiaccessinfo">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
-    </div> 
-</center>
-<center>
-    <div class="wheredoiaccess">
-    <h1>Where do I access this information?</h1>
-    <p id="wheredoiaccessinfo">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
-    </div>
-</center>
-<center>
-    <div class="gainaccess">
-    <h1>How do I gain access?</h1>
-    <p id="gainaccessinfo">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+            <div class="Parents">
+            <h1>Welcome Parents and Caregivers</h1>
+            <h2>What information can I access?</h1>
+            <p id="InfoIAccess">
+            Mandatory form completion: Demographics, Acceptable Use Policy, Health Form, Student Handbook Sign off
+            <br>
+            Absence Reporting:You can submit and view absence requests
+            <br>
+            Fees: You can view fees and payments
+            <br>
+            Food Service: Allows you to see transactions and make payments towards your student’s lunch account.
+            <br>
+            Grades: Both academic history and current
+            <br>
+            Health: You can view your student’s current conditions
+            <br>
+            Schedules: Your students daily courses
+            <br>
+            Staff Directory: Allows you to send emails to your student’s teachers
+            <br>
+            Transportation: You can view bus stop location and time of pick up 
+            </p>
+            <h2>Where do I access this information?</h2>
+            <p id="WhereDoIaccess">
+            By having a student already enrolled at York Tech you automatically have an account
+            Parents of a new student, you will use the same username and password that you created when completing your student’s online application.
+            ACCESS SKYWARD HERE https://skyward.iscorp.com/YorkTechPAStuSTS/
+            If you do not know your username or password, please select the Forgot Username and Password link.  Then type in your email address and the information will be sent to your email shortly. 
+            <h2>How do I gain access?</h2>
+            <p id="HowDoIGainaccess">
+            Returning Parents and Caregivers:
+            <br>
+            Go to www.schoology.com and use your existing login information
+            <br>
+            Parents and Caregivers of New Students:
+            <br>
+            Go to www.schoology.com
+            <br>
+            Click Sign Up at the top of the page and choose Parent.
+            <br>
+            Enter your Parent Access Code-- Your Parent Code will be given to your student on New Student Day..
+            <br>
+            Fill out the form with your information.
+            <br>
+            Click Register to complete.
+            </p>
+
     </div>
 </center>
 </body>
