--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,6 @@
 
 a {
-    color: blue
+    color: white
 }
 
 body {
@@ -108,6 +108,7 @@ font-size: x-large;
     font-size: x-large;
     }
 }
+
 /* header Styles */
 
 .header-container {
@@ -268,13 +269,14 @@ footer a {
     background-color: #00953B;
     width: 600;
 
-  
+    float: left;
     color: white;
     text-shadow: black 0px 0px 3px;
     font-family: Arial, Helvetica, sans-serif;
-
     padding: 10px;
-    margin-top: 15px;
+    margin: 10px;
+
+    height: 250px;
 }
 
 
@@ -287,9 +289,9 @@ footer a {
     color: white;
     text-shadow: black 0px 0px 3px;
     font-family: Arial, Helvetica, sans-serif;
- 
-
-    margin-bottom: 200px;
+    padding: 10px;
+    margin: 10px;
+    margin-bottom: 300px;
 
 }
 
@@ -299,13 +301,16 @@ footer a {
     border-color: #00953B;
     background-color: #00953B;
     width: 600;
-    height: 250px;
+
     color: white;
     text-shadow: black 0px 0px 3px;
     font-family: Arial, Helvetica, sans-serif;
 
-    position: relative; right: 700px; top: -300px;
-    margin-left: 125px;
+    
+    padding: 10px;
+    margin: 10px;
+    
+
 }
 
 .mainInfo {
@@ -313,43 +318,21 @@ footer a {
     border-color: #00953B;
     background-color: #00953B;
     width: 600;
-    height: 250px;
 
-   
+    float: right;
     color: white;
     text-shadow: black 0px 0px 3px;
     font-family: Arial, Helvetica, sans-serif;
+    padding: 10px;
+    margin: 10px;
 
-
-    float:right;
-    margin-right: 15px;
+    height: 250px;
 
 }   
 
-/* Shop CSV template */
-.text-container{
-    font-family: helvetica;
-    display: flex;
-    align-items: center;
-    width: 60%;
-    margin-left: auto;
-    margin-right: auto;
-}
-.text-container video {
-    width: 100%
-}
-
-@media (max-width: 650px) {
-    .text-container {
-        width: 100%;
-    }
-}
 
 
-
-
-/* Athletics Page (please fix please dear god) */
-
+/* Shop pages template CSS */
 
 .pageInfo {
     font-size: large;
