--- a/views/shopTemplate.ejs
+++ b/views/shopTemplate.ejs
@@ -1,28 +1,22 @@
 <html>
     <%- include('partials/_header') -%>
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <title>Template</title>
-       
+        
+        <h1 class="Temph1"><%- pageTitle -%></h1>
 
     </head>
 
     <body>
-    <div class="text-container">
-    <center>
-        <h1 class="Temph1"><%- pageTitle -%></h1>
-      
+
+        <center>
             <div id="tempVideo">
             
             </div>
-       
+        </center>
         
-        <%- pageInfo -%>
-    </center>
-    </div>
-        
+
+        <p class="pageInfo"><%- pageInfo -%></p>
     </body>
-    
     <%- include('partials/_footer') -%>
 
     <script>
@@ -32,7 +26,7 @@
         const vidPath = <%- JSON.stringify(pageVideo) %>
 
         if (vidPath.toLowerCase != "null") {
-            setAttributes(node, {"controls": "controls"})
+            setAttributes(node, {"width": "1000px", "height": "800px", "controls": "controls"})
             setAttributes(sourceVid, {"src": vidPath, "type": "video/mp4"})
             node.appendChild(sourceVid)
             videoDiv.appendChild(node)
