--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,6 @@
 
 a {
-    color: white
+    color: blue
 }
 
 body {
@@ -108,7 +108,6 @@ font-size: x-large;
     font-size: x-large;
     }
 }
-
 /* header Styles */
 
 .header-container {
@@ -269,14 +268,13 @@ footer a {
     background-color: #00953B;
     width: 600;
 
-    float: left;
+  
     color: white;
     text-shadow: black 0px 0px 3px;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 10px;
-    margin: 10px;
 
-    height: 250px;
+    padding: 10px;
+    margin-top: 15px;
 }
 
 
@@ -289,9 +287,9 @@ footer a {
     color: white;
     text-shadow: black 0px 0px 3px;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 10px;
-    margin: 10px;
-    margin-bottom: 300px;
+ 
+
+    margin-bottom: 200px;
 
 }
 
@@ -301,16 +299,13 @@ footer a {
     border-color: #00953B;
     background-color: #00953B;
     width: 600;
-
+    height: 250px;
     color: white;
     text-shadow: black 0px 0px 3px;
     font-family: Arial, Helvetica, sans-serif;
 
-    
-    padding: 10px;
-    margin: 10px;
-    
-
+    position: relative; right: 700px; top: -300px;
+    margin-left: 125px;
 }
 
 .mainInfo {
@@ -318,21 +313,43 @@ footer a {
     border-color: #00953B;
     background-color: #00953B;
     width: 600;
+    height: 250px;
 
-    float: right;
+   
     color: white;
     text-shadow: black 0px 0px 3px;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 10px;
-    margin: 10px;
 
-    height: 250px;
+
+    float:right;
+    margin-right: 15px;
 
 }   
 
+/* Shop CSV template */
+.text-container{
+    font-family: helvetica;
+    display: flex;
+    align-items: center;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+}
+.text-container video {
+    width: 100%
+}
+
+@media (max-width: 650px) {
+    .text-container {
+        width: 100%;
+    }
+}
 
 
-/* Shop pages template CSS */
+
+
+/* Athletics Page (please fix please dear god) */
+
 
 .pageInfo {
     font-size: large;
