--- a/static/styles.css
+++ b/static/styles.css
@@ -246,7 +246,7 @@ footer a {
     text-shadow: black 0px 0px 3px;
     font-family: Arial, Helvetica, sans-serif;
 
-    padding: 10px;
+    
     margin-top: 15px;
 }
 
@@ -301,6 +301,8 @@ footer a {
 
 
 .home-container {
+   display: flex;
+   flex-direction: column;
    
 }
 
