--- a/views/career_programs.ejs
+++ b/views/career_programs.ejs
@@ -52,7 +52,7 @@
 <li><a href="/Cosmetology">Licensed Cosmetology</a></li>
 <li><a href="/Medical">Medical Professions Program</a></li>
 <li><a href="/Powersports">PowerSports & Engine Technology</a></li>
-<li><a href="/PrecisionMachining">Precision Machining Technology</a></li>
+<li><a href="/Precisionmachining">Precision Machining Technology</a></li>
 <li><a href="/Sports">Sports Technology & Exercise Science</a></li>
 <li><a href="/Welding">Welding & Metal Fabrication Technology</a></li>
 
