--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -29,6 +29,7 @@
             <a href="/parents" class="header-page">Parents And Caregivers</a>
             <a href="/athletics" class="header-page">Spartan Athletics</a>
             <a href="/career" class="header-page">Career Programs</a>
+            <a href="/districts" class="header-page">District Map</a>
 
         </div>
 
