--- a/views/districtmap.ejs
+++ b/views/districtmap.ejs
@@ -5,10 +5,16 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Participating Districts</title>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 </head>
 <body>
 <center>
     <div class="text-container"><h1>Participating School Districts</h1></div>
+
+    <body>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1529.7495823109166!2d-76.68527127960058!3d39.93022292923513!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c8890b42d99345%3A0xe9b16f18cd68c8fe!2sYork%20County%20School%20of%20Technology!5e0!3m2!1sen!2sus!4v1678390009476!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    
 
     <div class="text-container">
 
