--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,5 @@
 
-a {
-    color: white
-}
+
 
 body {
     margin: 0;
@@ -101,12 +99,11 @@ font-size: medium;
 .header-container {
     background-color: #00953b;
     padding-bottom: 150px;
-
-    
     padding-top:1px;
     padding-left: 10px;
     
 }
+
 
 .header-img {
     float: left;
@@ -213,25 +210,34 @@ footer a {
   @media (max-width: 650px) {
     .header-h1 {
         padding-top: 10px;
-        margin-top: 20px;
+        margin-top: 0px;
         margin-left: 7px;
-        font-size: 4.5vw;
-
+        margin-bottom: -10px;
+        
+        text-align: center;
     }
     .header-img {
         padding-top: 5px;
         padding-right: 5px;
-        width: 15vw;
+        width: 25vw;
     }
     .header-container {
-        padding-bottom: 75px;
+        padding-bottom: 15px;
         padding-top: 15px;
         padding-left: 5px;
     }
 
+    .header-title {
+        display: flex;
+        flex-direction: column;
+    }
+    .header-title a {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     .header-pages {
         flex-direction: column;
-        
     }
 
     .header-page {
