--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="header-container">
-            <div>
+            <div class="header-title">
                 <a href="/"><input type="image" class="header-img" src="imgs\Spart.png"> </a>
                 <h1 class="header-h1">York County School Of Technology</h1>
             </div>
@@ -24,4 +24,6 @@
         </div>
 
     </body>
+
+    <script></script>
 </header>
