--- a/views/districtmap.ejs
+++ b/views/districtmap.ejs
@@ -13,9 +13,9 @@
     <div class="text-container"><h1>Participating School Districts</h1></div>
 
     <body>
+      <div class="google-map">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1529.7495823109166!2d-76.68527127960058!3d39.93022292923513!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c8890b42d99345%3A0xe9b16f18cd68c8fe!2sYork%20County%20School%20of%20Technology!5e0!3m2!1sen!2sus!4v1678390009476!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    
-
+      </div>
     <div class="text-container">
 
     <p>page content goes here</p>
