--- a/static/styles.css
+++ b/static/styles.css
@@ -340,13 +340,16 @@ footer a {
 
 /*District Map CSS*/
 .google-map {
-    padding-bottom: 50%;
     position: relative;
+    margin: 0 auto;
+    width: 65%;
+    height: 0;
+    padding-bottom: 40%;
 }
 
 .google-map iframe {
     height: 100%;
-    width: 100%;
+    width: 65%;
     left: 0;
     top: 0;
     position: absolute;
