--- a/static/styles.css
+++ b/static/styles.css
@@ -281,7 +281,7 @@ footer a {
 
 
 
-/* main page */
+/* main page please fix this parker = bad at pro gamming*/ 
 .whyUs {
     border: 3px;
     border-color: #00953B;
@@ -382,113 +382,4 @@ footer a {
     .text-container {
         width: 100%;
     }
-}
-/* Athletics Page (please fix please dear god) */
-
-.pageInfo {
-    font-size: large;
-}
-
-.Temph1 {
-    text-align: center;
-}
-
-.schedules {
-    width: 600px;
-    text-align: left;
-
-    border-bottom:3px;
-    border-left: 0px;
-    border-right: 0px;
-    border-top: 0px;
-    border-color: #00953B;
-    border-style: solid;
-}
-
-.schedules a {
-    color: blue;
-}
-
-.specialAnnouncements {
-    width: 600px;
-    text-align: left;
-
-    border-bottom:3px;
-    border-left: 0px;
-    border-right: 0px;
-    border-top: 0px;
-    border-color: #00953B;
-    border-style: solid;
-}
-
-.spartanAthletics {
-    width: 600px;
-    text-align: left;
-
-    border-bottom:3px;
-    border-left: 0px;
-    border-right: 0px;
-    border-top: 0px;
-    border-color: #00953B;
-    border-style: solid;
-}
-
-.coaching {
-    width: 600px;
-    text-align: left;
-
-    border-bottom:3px;
-    border-left: 0px;
-    border-right: 0px;
-    border-top: 0px;
-    border-color: #00953B;
-    border-style: solid;
-}
-
-.opportunities {
-    width: 600px;
-    text-align: left;
-
-    border-bottom:3px;
-    border-left: 0px;
-    border-right: 0px;
-    border-top: 0px;
-    border-color: #00953B;
-    border-style: solid;
-}
-
-.scorevision {
-    width: 600px;
-    text-align: left;
-
-    border-bottom:3px;
-    border-left: 0px;
-    border-right: 0px;
-    border-top: 0px;
-    border-color: #00953B;
-    border-style: solid;
-}
-
-.prices {
-    width: 600px;
-    text-align: left;
-
-    border-bottom:3px;
-    border-left: 0px;
-    border-right: 0px;
-    border-top: 0px;
-    border-color: #00953B;
-    border-style: solid;
-}
-
-.banners {
-    width: 600px;
-    text-align: left;
-
-    border-bottom:3px;
-    border-left: 0px;
-    border-right: 0px;
-    border-top: 0px;
-    border-color: #00953B;
-    border-style: solid;
 }
