replaced athletics page

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -27,7 +27,7 @@
         <div class="header-pages">
             <a href="/" class="header-page">Home</a>
             <a href="/parents" class="header-page">Parents And Caregivers</a>
-            <a href="/athletics" class="header-page">Spartan Athletics</a>
+            <a href="/sports" class="header-page">Sports</a>
             <a href="/career" class="header-page">Career Programs</a>
             <a href="/districts" class="header-page">District Map</a>
 
